plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.delivery'
version = '0.0.1-SNAPSHOT'

bootJar.enabled = false // 현재 모듈의 jar 파일을 생성하지 않음

repositories {
	mavenCentral()
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

subprojects {

	// plugin 추가
	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'org.springframework.boot'

	repositories {
		mavenCentral()
	}


	dependencies {

		// eureka client
		implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'

		// lombok
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'

		implementation 'org.springframework.boot:spring-boot-starter'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	}

	ext {
		set('springCloudVersion', "2023.0.3")
	}

	dependencyManagement {
		imports {
			mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
		}
	}

	tasks.named('test') {
		useJUnitPlatform()
	}
}


tasks.named('test') {
	useJUnitPlatform()
}
